style.css
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
@import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
@import url('https://fonts.googleapis.com/css?family=League+Script');

body{
    text-align: center;
    background-color: #fce4ec;
    font-family: 'Josefin Slab', serif;
    color: #2C2C2C;
}
p{
    font-weight: 2;
    font-size: 1.2em;
}
h1, h4, h3 {
    font-family: 'League Script', serif;
    font-weight: bold;
}

/* Remove margins and padding from the list, and add a black background color */
ul.topnav {
    list-style-type: none;
    margin:20px; 
    padding:5px;
    overflow: hidden;
}

/* Float the list items side by side */
ul.topnav li {float: right}

/* Style the links inside the list items */
ul.topnav li a {
    display: inline-block;
    color: #2C2C2C;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    transition: 0.3s;
    font-size: 25px;
}

ul.topnav li.left {
font-weight: bold;
}

/* Change background color of links on hover */
ul.topnav li a:hover {background-color: #f8bbd0}

/* Hide the list item that contains the link that should open and close the topnav on small screens */
ul.topnav li.icon {display: none;}

.my-header{
    display: inline-block;
}
.logo{
    display: inline-block;
    color: #2C2C2C;
    text-align: center;
    padding: 0px 16px;
    text-decoration: none;
    transition: 0.3s;
    font-size: 40px;
    font-family: 'League Script', serif;
}

.carousel .carousel-item {
width:400px !important;
}

.project-img{
    width:500px;
    background-color: red;
}


@media (min-width: 1100px) {
.projects-container{
    width: 1080px;
    min-height: 120px;
    max-height: auto;
    padding: 3px;
    display: flex;
    margin: 0 auto; 
}
}
@media (max-width: 1099px) {
.projects-container{
    width: 580px;
    min-height: 120px;
    max-height: auto;
    padding: 3px;
    margin: 0 auto; 
}
}

#projects{
    padding-top: 50px; 
}

#about{
    padding-top: 250px;  
    padding-bottom: 250px; 
}


.proj-card{
    width: 500px;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-right: 20px;
    margin-left: 20px;
}
.proj-pic{
    width: 500px;
    display: block;
    margin: auto;
}
.cool-fact{
    font-style: italic;
}

.contact {display: table; margin: 0 auto;}

.socialIcons{
    height: 30px;
    margin: 0 auto;
    padding-left: 15px;
}

.contact-sec{
    padding-top: 50px;
    padding-bottom: 50px;
}

.parallax-container {
      height: 840px;

    }


/*.parallax2{
   height: 1500px
}*/



.proj-img{
    margin-top: 15px;
    margin-bottom: 15px;
}



.mentor:hover {
    background-color: #f8bbd0;
    cursor: pointer;
    }
    
.mentor{
    display: inline-block;
    color: #2C2C2C;
    text-align: center;
    padding: 25px 25px;
    text-decoration: none;
    transition: 0.3s;
}

